# hh-parser

./: .gitignore  main.py  parsing vacancy (threading).ipynb  parsing_vacancy_api.ipynb  pyproject.toml  requirements.txt
output/: res.xlsx
