[project]
name = "hh-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiolimiter>=1.2.1",
    "free-proxy>=1.1.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "selenium>=4.40.0",
    "tqdm>=4.67.3",
]
